@@ -5,14 +5,13 @@
 
 plugins {
     id 'application'
-    id 'org.beryx.jlink' version '2.24.0'
+    id 'org.beryx.jlink' version '2.24.4'
     id 'idea'
 //    id 'com.dua3.javafxgradle7plugin' version '0.0.9'
     id 'org.openjfx.javafxplugin' version '0.0.10'
     id "de.jjohannes.extra-java-module-info" version "0.8"
     id 'com.gluonhq.gluonfx-gradle-plugin' version '1.0.11'
 }
-
 repositories {
     mavenCentral()
     maven { url "https://clojars.org/repo" }
@@ -59,7 +58,7 @@ dependencies {
         exclude group: 'org.openjfx'
     }
     // ControlsFX
-    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.1.0'
+    implementation group: 'org.controlsfx', name: 'controlsfx', version: '11.1.1'
 
     // Support special images format when render a PDF
     implementation group: 'com.github.jai-imageio', name: 'jai-imageio-core', version: '1.4.0'
@@ -73,7 +72,7 @@ dependencies {
     implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.16.0'
 
     // JSON requests
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.1'
     // YAML
     implementation group: 'org.yaml', name: 'snakeyaml', version: '1.29'
     // LaTeX
@@ -85,7 +84,7 @@ dependencies {
 
     // SVG
     implementation group: 'org.apache.xmlgraphics', name: 'batik-parser', version: '1.14'
-    implementation group: 'de.rototor.pdfbox', name: 'graphics2d', version: '0.33'
+    implementation group: 'de.rototor.pdfbox', name: 'graphics2d', version: '0.34'
 
     // PDF Box
     implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.24'
@@ -96,6 +95,7 @@ dependencies {
     // Unique4J
     implementation 'tk.pratanumandal:unique4j:1.4'
 
+
 }
 
 javafx {
@@ -105,7 +105,7 @@ javafx {
 
 def os = org.gradle.internal.os.OperatingSystem.current()
 
-version = "1.3.0"
+version = "1.3.1"
 description = "PDF students assessments editor"
 
 //frenchDescription="Éditeur de copies PDF"
@@ -210,63 +210,4 @@ jlink {
         }
     }
 }
-
-
-gluonfx {
-    target = "host"
-    //target = "android"
-
-    attachConfig {
-        version = "4.0.10"
-        services 'display', 'lifecycle', 'statusbar', 'storage'
-    }
-
-    bundlesList = []
-    resourcesList = []
-    reflectionList = []
-    jniList = []
-
-    compilerArgs = [
-            '--allow-incomplete-classpath',
-            '--enable-https'
-    ]
-    runtimeArgs = [
-            '--add-exports=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls',
-            '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls'
-    ]
-
-    javaStaticSdkVersion = "18-ea+2"
-    javafxStaticSdkVersion = "18-ea+2"
-    if (os.windows) graalvmHome = "C:\\Program Files\\AdoptOpenJDK\\graalvm-ce-java17-21.3.0"
-    else if (os.macOsX) graalvmHome = "undefined"
-    else if (os.linux) graalvmHome = "/opt/graalvm-ce-java17-21.3.0"
-    System.out.println("Using GraalVM: ".concat(graalvmHome))
-
-
-    verbose = false
-    enableSwRendering = false
-
-    /*remoteHostName = ""
-    remoteDir = ""*/
-
-    release {
-        // Android
-        appLabel = "PDF4Teachers"
-        versionCode = "1"
-        versionName = "1.3.1"
-        /*providedKeyStorePath = ""
-        providedKeyStorePassword = ""
-        providedKeyAlias = ""
-        providedKeyAliasPassword = ""*/
-
-        // iOS
-        /*bundleName = ""
-        bundleVersion = ""
-        bundleShortVersion = ""
-        providedSigningIdentity = ""
-        providedProvisioningProfile = ""
-        skipSigning = false*/
-    }
-}
-
 
